--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,83 +1,92 @@
 .index {
-  margin: 25px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
-  border-color: #aab2bd;
+    margin: 25px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
+    border-color: #aab2bd;
 }
 
 .head {
-  height: 380px;
-  border-bottom: 1px solid #c3c9d0;
-  .logo {
-    width: 700px;
-    height: 306px;
-    overflow: hidden;
-    img {
-      width: 100%;
+    height: 380px;
+    border-bottom: 1px solid #c3c9d0;
+    .logo {
+        width: 700px;
+        height: 306px;
+        overflow: hidden;
+        img {
+            width: 100%;
+        }
     }
-  }
-  .title {
-    font-weight: normal;
-    padding: 25px 30px 10px;
-    font-size: 30px;
-  }
+    .title {
+        font-weight: normal;
+        padding: 25px 30px 10px;
+        font-size: 30px;
+    }
 }
 
 .content {
-  padding: 15px;
-  border-bottom: 1px solid #c3c9d0;
-  .formItem {
-    color: #333;
-    text-align: left;
-    margin-bottom: 25px;
-    label {
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 10px;
-      display: inline-block;
+    padding: 15px;
+    border-bottom: 1px solid #c3c9d0;
+    .formItem {
+        color: #333;
+        text-align: left;
+        margin-bottom: 25px;
+        label {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 10px;
+            display: inline-block;
+        }
+        :global {
+            .am-input-item {
+                border: 1px solid #c3c9d0;
+            }
+        }
     }
-    :global {
-      .am-input-item {
+    .courseTitle {
+        font-size: 18px;
+        font-weight: bold;
+        text-align: left;
+        margin-bottom: 10px;
+    }
+    .courseList {
+        margin-top: 5px;
         border: 1px solid #c3c9d0;
-      }
-    }
-  }
-  .courseTitle {
-    font-size: 18px;
-    font-weight: bold;
-    text-align: left;
-    margin-bottom: 10px;
-  }
-  .courseList {
-    margin-top: 5px;
-    border: 1px solid #c3c9d0;
-    border-radius: 2px;
-    margin-bottom: 40px;
-    :global {
-      .am-checkbox-item {
-        border-bottom: 1px solid #c3c9d0;
-        &:last-of-type {
-          border-bottom: none;
+        border-radius: 2px;
+        margin-bottom: 40px;
+        :global {
+            .am-checkbox-item {
+                border-bottom: 1px solid #c3c9d0;
+                &:last-of-type {
+                    border-bottom: none;
+                }
+                .am-list-content {
+                    color: #505050;
+                    font-size: 22px;
+                }
+            }
+            .am-checkbox-inner {
+                border-radius: 5%;
+            }
         }
-        .am-list-content {
-          color: #505050;
-          font-size: 22px;
-        }
-      }
-      .am-checkbox-inner {
-        border-radius: 5%;
-      }
     }
-  }
 }
 
 .sumbit {
-  margin: 25px 15px;
-  padding-bottom: 25px;
-  .sumbitBtn {
-    background-color: #000;
-    color: #fff;
-    border-radius: 0;
-    font-weight: normal;
-    border-color: #000;
-  }
+    margin: 25px 15px;
+    padding-bottom: 25px;
+    .sumbitBtn {
+        background-color: #000;
+        color: #fff;
+        border-radius: 0;
+        font-weight: normal;
+        border-color: #000;
+    }
+}
+
+.eduList {
+    border: 1px solid #c3c9d0;
+    :global {
+        .am-list-content {
+            color: #505050 !important;
+        }
+    }
 }
